--- a/recipes/bread-pudding.html
+++ b/recipes/bread-pudding.html
@@ -6,5 +6,43 @@
   </head>
   <body>
     <h1>Bread Pudding</h1>
+
+    <img src="../images/bread-pudding.jpeg" alt="bread pudding" />
+
+    <h2>Delicious Bread Pudding for Breakfast or Dessert</h2>
+    <p>
+      Use this recipe to enjoy some bread pudding with your family and friends!
+    </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>6 slices day-old bread</li>
+      <li>2 tablespoons butter, melted</li>
+      <li>½ cup raisins (Optional)</li>
+      <li>4 eggs, beaten</li>
+      <li>2 cups milk</li>
+      <li>¾ cup white sugar</li>
+      <li>1 teaspoon ground cinnamon</li>
+      <li>1 teaspoon vanilla extract</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+      <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+      <li>
+        Break bread into small pieces into an 8 inch square baking pan. Drizzle
+        melted butter or margarine over bread. If desired, sprinkle with
+        raisins.
+      </li>
+      <li>
+        In a medium mixing bowl, combine eggs, milk, sugar, cinnamon, and
+        vanilla. Beat until well mixed. Pour over bread, and lightly push down
+        with a fork until bread is covered and soaking up the egg mixture.
+      </li>
+      <li>
+        Bake in the preheated oven for 45 minutes, or until the top springs back
+        when lightly tapped.
+      </li>
+    </ol>
   </body>
 </html>
